Fixed arrow down button not properly showing and hiding, fixed losing focus on mobile when sending message.

--- a/src/styles/components/sendMessageForm.scss
+++ b/src/styles/components/sendMessageForm.scss
@@ -43,7 +43,7 @@
         top: 0;
         right: 0;
       }
-      &:focus .icon {
+      &.animate-icon .icon {
         animation: flyerAnimate 0.5s forwards 1 ease;
       }
     }
